Native/OpenDDSWrapper/RtpsUdpInst.h

EXTERN_METHOD_EXPORT
::OpenDDS::DCPS::RtpsUdpInst *RtpsUdpInst_new(::OpenDDS::DCPS::TransportInst *inst);
EXTERN_METHOD_EXPORT
CORBA::Boolean RtpsUdpInst_GetIsReliable(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
CORBA::Boolean RtpsUdpInst_GetRequiresCdr(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
CORBA::Int32 RtpsUdpInst_GetSendBufferSize(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetSendBufferSize(::OpenDDS::DCPS::RtpsUdpInst *ri, CORBA::Int32 value);
EXTERN_METHOD_EXPORT
CORBA::Int32 RtpsUdpInst_GetRcvBufferSize(::OpenDDS::DCPS::RtpsUdpInst *ri);
EXTERN_METHOD_EXPORT
void RtpsUdpInst_SetRcvBufferSize(::OpenDDS::DCPS::RtpsUdpInst *ri, CORBA::Int32 value);